--- a/notebooks/05_r_swirl_stats_demo_quarto.qmd
+++ b/notebooks/05_r_swirl_stats_demo_quarto.qmd
@@ -8,22 +8,22 @@ editor: visual
 
 R and the **SwirlStats** library, see [SwirlStats](https://swirlstats.com/ "SwirlStats"){.uri}.
 
+#### 1. T-Test: Comparing the means of two groups (Automatic vs Manual Transmission)
+
 ```{r}
 
-# Load necessary libraries
 library(ggplot2)
 library(dplyr)
 library(tidyr)
 library(car)
 
-# 1. T-Test: Comparing the means of two groups (Automatic vs Manual Transmission)
 mtcars$am <- as.factor(mtcars$am)  # Convert 'am' to a factor
 t_test_result <- t.test(mpg ~ am, data = mtcars)
+t_test_result
+```
 
-# Print the T-Test result and explanation
-print(t_test_result)
-cat("\nT-Test Result:\n")
-cat("This test compares the mean miles per gallon (mpg) between automatic (am=0) and manual (am=1) transmission cars.\n")
+```{r}
+t_test_result$p.value
 
 # Check significance
 if (t_test_result$p.value < 0.05) {
@@ -31,22 +31,25 @@ if (t_test_result$p.value < 0.05) {
 } else {
   cat("Result: No statistically significant difference in mpg (p ≥ 0.05).\n")
 }
+```
 
+```{r}
 # Plot the T-Test
 ggplot(mtcars, aes(x = am, y = mpg)) +
   geom_boxplot() +
   labs(title = "Miles per Gallon by Transmission Type", x = "Transmission (0 = Automatic, 1 = Manual)", y = "Miles Per Gallon") +
   theme_minimal()
+```
 
+#### 2. ANOVA: Comparing means between more than two groups (Cylinders)
 
-# 2. ANOVA: Comparing means between more than two groups (Cylinders)
+```{r}
 anova_result <- aov(mpg ~ factor(cyl), data = mtcars)
 anova_summary <- summary(anova_result)
+anova_summary
+```
 
-# Print the ANOVA result and explanation
-print(anova_summary)
-cat("\nANOVA Result:\n")
-cat("This test compares the mean miles per gallon (mpg) across different cylinder groups.\n")
+```{r}
 
 # Check significance
 if (anova_summary[[1]][["Pr(>F)"]][1] < 0.05) {
@@ -55,15 +58,26 @@ if (anova_summary[[1]][["Pr(>F)"]][1] < 0.05) {
   cat("Result: No statistically significant differences between groups (p ≥ 0.05).\n")
 }
 
+cat("This test compares the mean miles per gallon (mpg) across different cylinder groups.\n")
+
+```
+
+```{r}
 # Plot the ANOVA
 ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +
   geom_boxplot() +
   labs(title = "Miles per Gallon by Cylinder Count", x = "Number of Cylinders", y = "Miles Per Gallon") +
   theme_minimal()
+```
 
+#### 3. Correlation: Correlation between horsepower and miles per gallon
 
-# 3. Correlation: Correlation between horsepower and miles per gallon
+```{r}
 correlation_result <- cor.test(mtcars$hp, mtcars$mpg)
+correlation_result
+```
+
+```{r}
 
 # Print the Correlation result and explanation
 print(correlation_result)
@@ -76,18 +90,24 @@ if (correlation_result$p.value < 0.05) {
 } else {
   cat("Result: No statistically significant correlation (p ≥ 0.05).\n")
 }
+```
 
+```{r}
 # Plot the correlation
 ggplot(mtcars, aes(x = hp, y = mpg)) +
   geom_point() +
   geom_smooth(method = 'lm', color = 'blue') +
   labs(title = "Correlation between Horsepower and Miles Per Gallon", x = "Horsepower", y = "Miles Per Gallon") +
   theme_minimal()
+```
 
-
+```{r}
 # 4. Chi-Squared Test: Testing association between two categorical variables (Transmission and Cylinders)
 chi_squared_result <- chisq.test(table(mtcars$am, mtcars$cyl))
+chi_square_result
+```
 
+```{r}
 # Print the Chi-Squared result and explanation
 print(chi_squared_result)
 cat("\nChi-Squared Test Result:\n")
@@ -99,9 +119,11 @@ if (chi_squared_result$p.value < 0.05) {
 } else {
   cat("Result: No statistically significant association between variables (p ≥ 0.05).\n")
 }
+```
 
+#### Pairs plot for exploratory data analysis
 
-# View the first few rows of the iris dataset
+```{r}
 head(iris)
 
 # Summary statistics
@@ -110,14 +132,42 @@ summary(iris)
 # Check for missing values
 sum(is.na(iris))
 
+# Pair plot to visualize relationships between variables
+pairs(iris[,1:4], col = iris$Species)
+```
+
+```{r}
 # Visualize the distribution of Sepal.Length by Species
 ggplot(iris, aes(x = Species, y = Sepal.Length, fill = Species)) +
   geom_boxplot() +
   labs(title = "Distribution of Sepal Length by Species",
        x = "Species", y = "Sepal Length")
 
-# Pair plot to visualize relationships between variables
-pairs(iris[,1:4], col = iris$Species)
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 # Load necessary libraries
 library(ggplot2)
