--- a/week2/notebooks/02a_data-wrangling_weather-data.qmd
+++ b/week2/notebooks/02a_data-wrangling_weather-data.qmd
@@ -65,8 +65,6 @@ Brainstorm how you would need to modify this dataset to do this analysis. Write 
 
 
 
-
-
 ```
 
 # 4. Subsetting the dataset
@@ -184,6 +182,8 @@ ggplot(data=yearly_temps, aes(x=YEAR)) +
 # EXERCISE:
 
 Create a similar graph, but this time showing the average yearly rain and snowfall for Hanover.
+
+\*\*OR, download data for your hometown from NOAA and create a similar graph (temperature, snowfall, precipitation, etc.)
 
 ## Exploring the Dataset
 
